--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,1 @@
-storage filter=lfs diff=lfs merge=lfs -text
-storage/* filter=lfs diff=lfs merge=lfs -text
+storage/**/*/* filter=lfs diff=lfs merge=lfs -text
